--- a/jeux.html
+++ b/jeux.html
@@ -215,7 +215,7 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-orange-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Communication claire, gestion du stress</p>
-            <a href="https://www.nintendo.com/us/store/products/overcooked-2-switch/" 
+            <a href="https://www.youtube.com/watch?v=ZKNO0MsDV2k" 
                target="_blank" rel="noopener" 
                class="btn btn-xs btn-outline btn-primary mt-2">
               ▶️ Voir le trailer
@@ -238,7 +238,7 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-blue-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Pensée spatiale, patience</p>
-            <a href="https://www.nintendo.com/us/store/products/portal-companion-collection-switch/" 
+            <a href="https://www.youtube.com/watch?v=tax4e4hBBZc" 
                target="_blank" rel="noopener" 
                class="btn btn-xs btn-outline btn-primary mt-2">
               ▶️ Voir le trailer
@@ -261,7 +261,7 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-red-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Écoute active, précision verbale</p>
-            <a href="https://www.nintendo.com/us/store/products/keep-talking-and-nobody-explodes-switch/" 
+            <a href="https://www.youtube.com/watch?v=5BhHkvHcUfo" 
                target="_blank" rel="noopener" 
                class="btn btn-xs btn-outline btn-primary mt-2">
               ▶️ Voir le trailer
@@ -284,7 +284,7 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-purple-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Leadership rotatif, entraide</p>
-            <a href="https://www.nintendo.com/us/store/products/lovers-in-a-dangerous-spacetime-switch/" 
+            <a href="https://www.youtube.com/watch?v=pOnZ9hYiArs" 
                target="_blank" rel="noopener" 
                class="btn btn-xs btn-outline btn-primary mt-2">
               ▶️ Voir le trailer
@@ -307,7 +307,7 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-green-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Planification, persévérance</p>
-            <a href="https://www.nintendo.com/us/store/products/moving-out-switch/" 
+            <a href="https://www.youtube.com/watch?v=I7AV6ByKWpE" 
                target="_blank" rel="noopener" 
                class="btn btn-xs btn-outline btn-primary mt-2">
               ▶️ Voir le trailer
