--- a/jeux.html
+++ b/jeux.html
@@ -238,7 +238,7 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-blue-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Pensée spatiale, patience</p>
-            <a href="https://www.youtube.com/watch?v=tax4e4hBBZc" 
+            <a href="https://www.youtube.com/watch?v=wMQASUA_1Do" 
                target="_blank" rel="noopener" 
                class="btn btn-xs btn-outline btn-primary mt-2">
               ▶️ Voir le trailer
@@ -261,7 +261,7 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-red-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Écoute active, précision verbale</p>
-            <a href="https://www.youtube.com/watch?v=5BhHkvHcUfo" 
+            <a href="https://www.youtube.com/watch?v=DAybre4vLYY" 
                target="_blank" rel="noopener" 
                class="btn btn-xs btn-outline btn-primary mt-2">
               ▶️ Voir le trailer
@@ -284,7 +284,7 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-purple-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Leadership rotatif, entraide</p>
-            <a href="https://www.youtube.com/watch?v=pOnZ9hYiArs" 
+            <a href="https://www.youtube.com/watch?v=2TE98COZC8c" 
                target="_blank" rel="noopener" 
                class="btn btn-xs btn-outline btn-primary mt-2">
               ▶️ Voir le trailer
@@ -307,7 +307,7 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-green-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Planification, persévérance</p>
-            <a href="https://www.youtube.com/watch?v=I7AV6ByKWpE" 
+            <a href="https://www.youtube.com/watch?v=mlYQoZGogac" 
                target="_blank" rel="noopener" 
                class="btn btn-xs btn-outline btn-primary mt-2">
               ▶️ Voir le trailer
