--- a/jeux.html
+++ b/jeux.html
@@ -307,7 +307,7 @@
             <div class="divider my-2"></div>
             <p class="text-xs font-bold text-green-600">Ce qu'on retient :</p>
             <p class="text-xs opacity-75">Planification, persévérance</p>
-            <a href="https://www.youtube.com/watch?v=mlYQoZGogac" 
+            <a href="https://www.youtube.com/watch?v=EdDrzJP3dKM" 
                target="_blank" rel="noopener" 
                class="btn btn-xs btn-outline btn-primary mt-2">
               ▶️ Voir le trailer
