--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       "iconPosition": "BottomRight",
       "adblocker": false,
       "AcceptAllCta": true,
-      "highPrivacy": true,
+      "highPrivacy": false,
       "handleBrowserDNTRequest": false,
       "removeCredit": false,
       "readmoreLink": "/mentions.html#cookies",
