--- a/infos-pratiques.html
+++ b/infos-pratiques.html
@@ -512,7 +512,7 @@
       "iconPosition": "BottomRight",
       "adblocker": false,
       "AcceptAllCta": true,
-      "highPrivacy": true,
+      "highPrivacy": false,
       "handleBrowserDNTRequest": false,
       "removeCredit": false,
       "readmoreLink": "/mentions.html#cookies",
