--- a/mentions.html
+++ b/mentions.html
@@ -775,7 +775,7 @@
       "iconPosition": "BottomRight",
       "adblocker": false,
       "AcceptAllCta": true,
-      "highPrivacy": true,
+      "highPrivacy": false,
       "handleBrowserDNTRequest": false,
       "removeCredit": false,
       "readmoreLink": "/mentions.html#cookies",
