--- a/programmes.html
+++ b/programmes.html
@@ -477,7 +477,7 @@
       "iconPosition": "BottomRight",
       "adblocker": false,
       "AcceptAllCta": true,
-      "highPrivacy": true,
+      "highPrivacy": false,
       "handleBrowserDNTRequest": false,
       "removeCredit": false,
       "readmoreLink": "/mentions.html#cookies",
