--- a/recherche.html
+++ b/recherche.html
@@ -734,7 +734,7 @@
       "iconPosition": "BottomRight",
       "adblocker": false,
       "AcceptAllCta": true,
-      "highPrivacy": true,
+      "highPrivacy": false,
       "handleBrowserDNTRequest": false,
       "removeCredit": false,
       "readmoreLink": "/mentions.html#cookies",
