--- a/recherche.html
+++ b/recherche.html
@@ -202,8 +202,8 @@
             </div>
             <div class="divider">Comment on l'applique</div>
             <p class="text-sm">
-              <strong class="text-ludus-teal">→ Sessions limitées à 2h/semaine</strong><br>
-              Dans la zone optimale identifiée (1-3h/semaine)
+              <strong class="text-ludus-teal">→ Sessions de 2h maximum</strong><br>
+              Mercredi après-midi uniquement (14h-16h ou 17h-19h)
             </p>
           </div>
         </div>
@@ -290,9 +290,9 @@
               <div class="bg-success/10 rounded-lg p-4">
                 <h4 class="font-bold text-success mb-3">✅ Nos protections</h4>
                 <ul class="space-y-2 text-sm">
-                  <li>→ <strong>Pauses actives obligatoires</strong> toutes les 45 min</li>
-                  <li>→ <strong>Exercices d'échauffement</strong> en début</li>
-                  <li>→ <strong>20 min de mouvement</strong> par session</li>
+                  <li>→ <strong>Pause active de 20 min</strong> en fin de session</li>
+                  <li>→ <strong>Exercices d'échauffement</strong> (10 min début)</li>
+                  <li>→ <strong>Débriefs debout</strong> (on bouge en parlant)</li>
                   <li>→ <strong>Règle 20-20-20</strong> pour les yeux</li>
                   <li>→ <strong>Posture vérifiée</strong> par l'animateur</li>
                 </ul>
@@ -320,10 +320,10 @@
               <div class="bg-success/10 rounded-lg p-4">
                 <h4 class="font-bold text-success mb-3">✅ Nos protections</h4>
                 <ul class="space-y-2 text-sm">
-                  <li>→ <strong>Sessions l'après-midi</strong> uniquement</li>
+                  <li>→ <strong>Sessions mercredi après-midi</strong> (14h-16h ou 17h-19h)</li>
                   <li>→ <strong>Fin à 19h maximum</strong></li>
-                  <li>→ <strong>Cooldown obligatoire</strong> (retour au calme)</li>
-                  <li>→ <strong>Pas d'écrans excitants</strong> (que du coop calme)</li>
+                  <li>→ <strong>20 min de cooldown</strong> en fin de session</li>
+                  <li>→ <strong>Retour au calme</strong> avant de rentrer</li>
                 </ul>
               </div>
             </div>
