--- a/recherche.html
+++ b/recherche.html
@@ -109,9 +109,9 @@
           Entre bénéfices prouvés et risques à éviter
         </p>
         <div class="flex gap-4 justify-center">
-          <div class="badge badge-lg bg-white/20 text-white border-0">87 ans de recherche</div>
+          <div class="badge badge-lg bg-white/20 text-white border-0">105 études analysées</div>
           <div class="badge badge-lg bg-white/20 text-white border-0">36,000+ participants</div>
-          <div class="badge badge-lg bg-white/20 text-white border-0">12 pays étudiés</div>
+          <div class="badge badge-lg bg-white/20 text-white border-0">2009-2025</div>
         </div>
       </div>
     </section>
