--- a/recherche.html
+++ b/recherche.html
@@ -548,7 +548,7 @@
     </section>
 
     <!-- CTA final -->
-    <section class="text-center gradient-ludus rounded-3xl p-8 text-white">
+    <section class="text-center gradient-ludus rounded-3xl p-8 text-white mb-12">
       <h2 class="text-3xl font-bold mb-4">
         Une approche construite sur des bases solides
       </h2>
@@ -563,11 +563,43 @@
           Rejoindre le club
         </a>
       </div>
-      
-      <p class="text-sm opacity-75 mt-6">
-        📚 Envie d'approfondir ? Consultez notre 
-        <a href="/ludus-mentis-checklist.html" class="underline">bibliographie complète de 105 références</a>
-      </p>
+    </section>
+    
+    <!-- Section Pour aller plus loin -->
+    <section class="mb-12">
+      <div class="card bg-base-200">
+        <div class="card-body text-center">
+          <h2 class="text-2xl font-bold mb-4">
+            📚 Pour aller plus loin
+          </h2>
+          <p class="mb-6">
+            Cette page présente notre synthèse pratique.<br>
+            Pour ceux qui souhaitent approfondir, nous avons préparé :
+          </p>
+          <div class="grid md:grid-cols-2 gap-4 max-w-2xl mx-auto">
+            <a href="/bibliographie.html" class="card bg-base-100 hover:shadow-xl transition-shadow">
+              <div class="card-body">
+                <h3 class="card-title text-ludus-teal">📖 Bibliographie complète</h3>
+                <p class="text-sm">
+                  Les 105 références scientifiques analysées, 
+                  organisées par thème avec résumé pour chaque étude
+                </p>
+                <div class="badge badge-outline">Consultable sur demande</div>
+              </div>
+            </a>
+            <a href="/analyse-approfondie.html" class="card bg-base-100 hover:shadow-xl transition-shadow">
+              <div class="card-body">
+                <h3 class="card-title text-ludus-purple">🔬 Analyse nuancée</h3>
+                <p class="text-sm">
+                  Les débats scientifiques, limites méthodologiques 
+                  et zones d'incertitude
+                </p>
+                <div class="badge badge-outline">Pour les professionnels</div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
   
