--- a/recherche.html
+++ b/recherche.html
@@ -102,7 +102,7 @@
     <section class="hero gradient-ludus rounded-3xl p-8 lg:p-12 mb-12 text-white">
       <div class="text-center max-w-4xl mx-auto">
         <h1 class="text-4xl lg:text-5xl font-bold mb-6">
-          Ce que la science nous enseigne vraiment
+          Ce que nous apprend la recherche scientifique
         </h1>
         <p class="text-xl opacity-95 mb-6">
           <strong>105 études analysées</strong> pour créer une approche équilibrée<br>
