Update legal information in mentions.html

--- a/mentions.html
+++ b/mentions.html
@@ -140,23 +140,21 @@
           <h2 class="card-title text-2xl mb-4 text-ludus-teal">1. Éditeur du site</h2>
           
           <div class="space-y-2">
-            <p><strong>Dénomination :</strong> Ludus Mentis ASBL (en cours de création)</p>
+            <p><strong>Dénomination :</strong> Ludus Mentis® ASBL </p>
             <p><strong>Forme juridique :</strong> Association Sans But Lucratif (ASBL)</p>
             <p><strong>Fondateur et responsable :</strong> Antoine Billard</p>
             <p><strong>Directeur de publication :</strong> Antoine Billard</p>
-            <p><strong>Adresse du siège :</strong> [À préciser], 1457 Walhain, Belgique</p>
+            <p><strong>Adresse du siège :</strong> Rue du bois de buis 43, 1457 Walhain, Belgique</p>
             <p><strong>Email :</strong> <a href="mailto:info@ludusmentis.be" class="text-ludus-teal hover:underline">info@ludusmentis.be</a></p>
-            <p><strong>Téléphone :</strong> [À communiquer ultérieurement]</p>
-            <p><strong>N° BCE :</strong> En cours d'attribution (dépôt prévu Q4 2025)</p>
-            <p><strong>N° TVA :</strong> Non assujetti (ASBL)</p>
-            <p><strong>Compte bancaire :</strong> [À communiquer après création ASBL]</p>
+            <p><strong>N° BCE :</strong> BE1027.805.565 </p>
+            <p><strong>Compte bancaire :</strong> BE56 9735 3499 9288</p>
           </div>
           
           <div class="alert alert-info mt-4">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-current shrink-0 w-6 h-6">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
             </svg>
-            <span>ASBL en cours de création - Ouverture prévue janvier 2026. Les informations légales seront complétées après l'immatriculation officielle.</span>
+            <span>ASBL - Ouverture prévue janvier 2026. </span>
           </div>
         </div>
       </div>
