--- a/contact.html
+++ b/contact.html
@@ -372,7 +372,7 @@
             <div class="divider"></div>
             
             <p class="text-xs opacity-50">
-              ASBL en cours de création<br>
+              ASBL Ludus Mentis ® <br>
               Ouverture prévue : janvier 2026
             </p>
           </div>
