Update contact information in footer

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       </div>
       
       <p class="text-sm opacity-75 mt-6">
-        ASBL en cours de création • Contact : info@ludusmentis.be
+        ASBL Ludus Mentis ® • Marque déposée • Contact : info@ludusmentis.be
       </p>
     </section>
   </main>
