Update title and branding for Ludus Mentis

--- a/infos-pratiques.html
+++ b/infos-pratiques.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tarifs horaires club gaming ado | Ludus Mentis Walhain</title>
+  <title>Tarifs horaires club gaming ado | Ludus Mentis ® Walhain</title>
   <meta name="description" content="Club gaming Walhain : 230€/7 semaines, mercredi 14h-16h ou 17h-19h, 10-15 ans. Alternative éducative Fortnite. FAQ parents, tout compris.">
   
   <!-- Canonical et indexation -->
@@ -26,7 +26,7 @@
     "@type": "FAQPage",
     "mainEntity": [{
       "@type": "Question",
-      "name": "Combien coûte l'inscription à Ludus Mentis ?",
+      "name": "Combien coûte l'inscription à Ludus Mentis ® ?",
       "acceptedAnswer": {
         "@type": "Answer",
         "text": "230€ pour un module de 7 semaines (14h de gaming encadré), soit 16,43€/heure tout compris. Réductions disponibles pour les résidents de Walhain (-10%) et les fratries (-10%)."
@@ -300,7 +300,7 @@
         <div class="collapse collapse-plus bg-base-200">
           <input type="radio" name="faq-accordion" checked="checked" />
           <div class="collapse-title text-xl font-medium">
-            🎮 Qu'est-ce que Ludus Mentis exactement ?
+            🎮 Qu'est-ce que Ludus Mentis ® exactement ?
           </div>
           <div class="collapse-content">
             <p class="pt-4">
