Update text formatting in contact.html

--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
     <section class="hero gradient-ludus rounded-3xl p-8 lg:p-12 mb-12 text-white">
       <div class="text-center max-w-4xl mx-auto">
         <h1 class="text-4xl lg:text-5xl font-bold mb-6">
-          Module 2 — Inscriptions ouvertes
+          Module 2 : Inscriptions ouvertes
         </h1>
         <p class="text-xl mb-6 opacity-95">
           4 mars → 22 avril 2026 • 8 mercredis • Places limitées
@@ -237,7 +237,7 @@
               <div class="flex items-start gap-3">
                 <span class="text-2xl">💰</span>
                 <div>
-                  <strong>130€ — tarif de lancement</strong>
+                  <strong>130€ : tarif de lancement</strong>
                   <p class="text-sm opacity-75">Tout compris, paiement flexible</p>
                 </div>
               </div>
