Fix punctuation and phrasing in journal.html

--- a/journal.html
+++ b/journal.html
@@ -104,7 +104,7 @@
       <div class="card bg-base-100 shadow-xl">
         <div class="card-body">
           <h2 class="card-title text-xl text-ludus-teal mb-4">
-            Poser les bases — et découvrir qu'on en avait besoin
+            Poser les bases et découvrir qu'on en avait besoin
           </h2>
           
           <p class="mb-4">
@@ -148,12 +148,12 @@
       <div class="card bg-base-100 shadow-xl">
         <div class="card-body">
           <h2 class="card-title text-xl text-ludus-orange mb-4">
-            Keep Talking and Nobody Explodes — le grand test
+            Keep Talking and Nobody Explodes : le grand test
           </h2>
           
           <p class="mb-4">
             Un joueur voit une bombe à l'écran. Les autres ont le manuel de désamorçage sur papier. 
-            Ils ne voient pas la même chose. Ils doivent donc se parler — précisément, calmement, 
+            Ils ne voient pas la même chose. Ils doivent donc se parler précisément, calmement, 
             rapidement.
           </p>
 
@@ -166,7 +166,7 @@
           <p class="mb-4">
             Mais la séance a aussi montré ses limites. Entre les erreurs de traduction des manuels 
             et quelques modules capricieux, la frustration est montée. C'est là que le rôle 
-            d'animateur prend tout son sens : transformer l'énervement en question — 
+            d'animateur prend tout son sens : transformer l'énervement en question 
             "qu'est-ce qu'on change pour la prochaine fois ?"
           </p>
 
@@ -175,7 +175,7 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
             </svg>
             <span>
-              <strong>Ce qu'on retient :</strong> La frustration est formative — à condition qu'elle 
+              <strong>Ce qu'on retient :</strong> La frustration est formative à condition qu'elle 
               soit accompagnée. Un enfant qui apprend à gérer l'échec dans un jeu apprend quelque chose 
               d'utile bien au-delà des écrans.
             </span>
@@ -203,7 +203,7 @@
           </p>
 
           <p class="mb-4">
-            Quand on leur laissait le choix — continuer la pause active ou retourner jouer — 
+            Quand on leur laissait le choix entre continuer la pause active ou retourner jouer,  
             <strong>ils choisissaient de continuer à bouger</strong>. 
             Des ados qui préfèrent courir plutôt que retourner à la manette, 
             ce n'est pas ce qu'on attendait.
