Remove punctuation from source citations

--- a/notre-approche.html
+++ b/notre-approche.html
@@ -117,7 +117,7 @@
             <p class="text-xs opacity-50 mt-1">▼ Cliquez pour détails</p>
           </summary>
           <div class="px-4 pb-4">
-            <p class="text-xs"><strong>Source :</strong> OMS (2020) — Les adolescents passant >3h/jour devant un écran ont 48% moins d'activité physique que les recommandations.</p>
+            <p class="text-xs"><strong>Source :</strong> OMS (2020) Les adolescents passant >3h/jour devant un écran ont 48% moins d'activité physique que les recommandations.</p>
           </div>
         </details>
         <details class="card bg-base-100 shadow border-t-4 border-warning cursor-pointer">
@@ -128,7 +128,7 @@
             <p class="text-xs opacity-50 mt-1">▼ Cliquez pour détails</p>
           </summary>
           <div class="px-4 pb-4">
-            <p class="text-xs"><strong>Source :</strong> Pew Research Center (2018) — 61% des adolescents jouent principalement seuls, sans interaction sociale directe.</p>
+            <p class="text-xs"><strong>Source :</strong> Pew Research Center (2018) 61% des adolescents jouent principalement seuls, sans interaction sociale directe.</p>
           </div>
         </details>
         <details class="card bg-base-100 shadow border-t-4 border-orange-500 cursor-pointer">
@@ -139,7 +139,7 @@
             <p class="text-xs opacity-50 mt-1">▼ Cliquez pour détails</p>
           </summary>
           <div class="px-4 pb-4">
-            <p class="text-xs"><strong>Source :</strong> EU Kids Online (2020) — 73% des parents européens rapportent des conflits liés au temps d'écran.</p>
+            <p class="text-xs"><strong>Source :</strong> EU Kids Online (2020) 73% des parents européens rapportent des conflits liés au temps d'écran.</p>
           </div>
         </details>
         <details class="card bg-base-100 shadow border-t-4 border-secondary cursor-pointer">
@@ -150,7 +150,7 @@
             <p class="text-xs opacity-50 mt-1">▼ Cliquez pour détails</p>
           </summary>
           <div class="px-4 pb-4">
-            <p class="text-xs"><strong>Source :</strong> Mihara & Higuchi (2017) — Entre 3 et 4% des jeunes joueurs développent des symptômes de "Gaming Disorder".</p>
+            <p class="text-xs"><strong>Source :</strong> Mihara & Higuchi (2017) Entre 3 et 4% des jeunes joueurs développent des symptômes de "Gaming Disorder".</p>
           </div>
         </details>
       </div>
@@ -260,7 +260,7 @@
                 <div class="text-3xl font-bold">+35%</div>
                 <p>Comportements d'entraide</p>
               </summary>
-              <div class="text-sm text-left mt-4"><strong>Source :</strong> Greitemeyer & Mügge (2014) — Augmentation de 35% des comportements prosociaux après 20 minutes de jeu coopératif.</div>
+              <div class="text-sm text-left mt-4"><strong>Source :</strong> Greitemeyer & Mügge (2014) Augmentation de 35% des comportements prosociaux après 20 minutes de jeu coopératif.</div>
             </details>
             <details class="bg-white/20 rounded-lg p-6 cursor-pointer">
               <summary>
@@ -268,7 +268,7 @@
                 <div class="text-3xl font-bold">Le contexte</div>
                 <p>est déterminant</p>
               </summary>
-              <div class="text-sm text-left mt-4"><strong>Source :</strong> Orben & Przybylski (2019) — Le contexte d'usage a plus d'impact que le temps de jeu. <em>355,358 adolescents</em></div>
+              <div class="text-sm text-left mt-4"><strong>Source :</strong> Orben & Przybylski (2019) Le contexte d'usage a plus d'impact que le temps de jeu. <em>355,358 adolescents</em></div>
             </details>
           </div>
         </div>
