Replace placeholder image with actual image

--- a/journal.html
+++ b/journal.html
@@ -178,14 +178,12 @@
               </p>
             </div>
 
-            <!-- 📷 IMAGE 1 — remplacer par : <img src="/assets/images/journal/seance1-salle.jpg" alt="La salle installée avant l'arrivée des enfants" class="journal-img"> -->
-            <div class="img-placeholder">
-              <span class="icon">📷</span>
-              <strong>Photo à ajouter</strong>
-              <p>La salle installée,<br>consoles posées avant l'arrivée des enfants</p>
-              <code class="text-xs opacity-50">assets/images/journal/seance1-salle.jpg</code>
-            </div>
-          </div>
+            <img 
+              src="assets/images/PXL_20260121_154537669.MP.jpg" 
+              alt="La salle installée avant l'arrivée des enfants" 
+              class="journal-img"
+              loading="lazy"
+            >
 
           <div class="retenir retenir-teal">
             <strong>Ce qu'on retient :</strong> Le tour de table du début prend 5 minutes et change tout à la qualité de ce qui suit.
@@ -220,7 +218,7 @@
             <div class="space-y-3 text-gray-700">
               <p>
                 Un joueur voit une bombe à l'écran. Les autres ont le manuel de désamorçage sur papier. 
-                Ils ne voient pas la même chose — ils doivent se parler : précisément, calmement, rapidement.
+                Ils ne voient pas la même chose, ils doivent se parler : précisément, calmement, rapidement.
               </p>
               <p>
                 4 bombes désamorcées. Pour des débutants complets, c'est une vraie performance.
@@ -256,15 +254,15 @@
           <div class="grid md:grid-cols-2 gap-6 mb-4 items-start">
             <div class="space-y-3 text-gray-700">
               <p>
-                Quand on leur laissait le choix — continuer la pause active ou retourner jouer — 
+                Quand on leur laissait le choix : continuer la pause active ou retourner jouer,
                 <strong>ils choisissaient de continuer à bouger</strong>.
               </p>
               <p>
                 Le mouvement physique "vide" le trop-plein d'énergie mentale accumulé pendant la 
-                concentration intense du jeu. La pause n'est pas une interruption — c'est une partie du cycle.
+                concentration intense du jeu. La pause n'est pas une interruption, c'est une partie du cycle.
               </p>
               <p>
-                On a aussi introduit le palming et quelques exercices de respiration — des outils 
+                On a aussi introduit le palming et quelques exercices de respiration : des outils 
                 concrets que les enfants peuvent réutiliser à la maison.
               </p>
             </div>
@@ -279,7 +277,7 @@
           </div>
 
           <div class="retenir retenir-purple">
-            <strong>Ce qu'on retient :</strong> Des ados qui préfèrent courir plutôt que retourner à la manette — on ne s'y attendait pas.
+            <strong>Ce qu'on retient :</strong> Des ados qui préfèrent courir plutôt que retourner à la manette, on ne s'y attendait pas.
           </div>
         </div>
       </article>
