--- a/journal.html
+++ b/journal.html
@@ -207,13 +207,13 @@
 
           <div class="grid md:grid-cols-2 gap-6 mb-4 items-start">
 
-            <!-- 📷 IMAGE 2 — remplacer par : <img src="/assets/images/journal/seance3-manuel.jpg" alt="Le manuel de désamorçage étalé sur la table" class="journal-img"> -->
-            <div class="img-placeholder">
-              <span class="icon">📷</span>
-              <strong>Photo à ajouter</strong>
-              <p>Le manuel de désamorçage<br>étalé sur la table</p>
-              <code class="text-xs opacity-50">assets/images/journal/seance3-manuel.jpg</code>
-            </div>
+           
+            <img 
+              src="assets/images/screenshot4_manualNEEDSUPDATE-1024x576.jpg" 
+              alt="Manuel de désarmorçage" 
+              class="journal-img"
+              loading="lazy"
+            >
 
             <div class="space-y-3 text-gray-700">
               <p>
