--- a/journal.html
+++ b/journal.html
@@ -132,7 +132,7 @@
         </div>
 
         <h2 class="text-xl font-bold text-ludus-teal mb-4">
-          Poser les bases — et découvrir qu'on en avait besoin
+          Poser les bases et découvrir qu'on en avait besoin
         </h2>
 
         <div class="grid md:grid-cols-2 gap-6 mb-4 items-start">
